--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=ResumeParser
 
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/resume
+spring.datasource.url=jdbc:mysql://localhost:3306/resume?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=sanjaysanthosh08
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
