--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-spring.application.name=ResumeParser
-
-
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/resumify
+# JDBC URL of your database (adjust to your actual DB configuration)
+spring.datasource.url=jdbc:mysql://localhost:3306/resumify_db
 spring.datasource.username=root
-spring.datasource.password=nandana123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.password=Anjiya@2002
 
+# Hibernate dialect (MySQL in this case)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Hibernate JPA Configuration
-
-spring.jpa.hibernate.ddl-auto=update 
+# JPA/Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
