--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # JDBC URL of your database (adjust to your actual DB configuration)
 spring.datasource.url=jdbc:mysql://localhost:3306/resumify
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Aswin@2001
 
 # Hibernate dialect (MySQL in this case)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
