--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # JDBC URL of your database (adjust to your actual DB configuration)
 spring.datasource.url=jdbc:mysql://localhost:3306/resumify
 spring.datasource.username=root
-spring.datasource.password=Aswin@2001
+spring.datasource.password=root
 
 # Hibernate dialect (MySQL in this case)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -10,3 +10,18 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+# Mail Configuration (Gmail SMTP)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=zitra.pvtltd@gmail.com
+spring.mail.password=hqhdvguijjklydsw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+spring.mail.default-encoding=UTF-8
+logging.level.org.springframework=DEBUG
+logging.level.com.example.project=DEBUG
+
+
